--- a/Metodos Matrices Simetricas.ipynb
+++ b/Metodos Matrices Simetricas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,35 +39,11 @@
     "                [1]])\n",
     "\n",
     "#Iteraciones\n",
-    "n = 7 #Python cuenta desde 0\n",
+    "n = 6 #Python cuenta desde 0\n",
     "iteraciones = range(1,n)\n",
     "\n",
     "# Iteraciones para potencias negativas\n",
     "iteraciones_pq = range(-1, -n, -1)  # Esto generará una secuencia de -1 a -n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Matriz inicial\n",
-    "A = np.array([[0.6, 0.3, 0.1],\n",
-    "              [0.3, 0.5, 0.4],\n",
-    "              [0.1, 0.2, 0.5]])\n",
-    "\n",
-    "#Vector Inicial\n",
-    "V_0 = np.array([[0.6],\n",
-    "                [0.2],\n",
-    "                [0.2]])\n",
-    "\n",
-    "#Iteraciones\n",
-    "n = 11 #Python cuenta desde 0\n",
-    "iteraciones = range(1,n)\n",
-    "\n",
-    "# Iteraciones para potencias negativas\n",
-    "iteraciones_pq = range(-1, -n, -1)  # Esto generará una secuencia de -1 a -6"
    ]
   },
   {
@@ -79,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +215,7 @@
      "output_type": "stream",
      "text": [
       "Los valores propios de la matriz A son:\n",
-      "[1.    0.441 0.159]\n"
+      "[ 7.472 -1.472]\n"
      ]
     }
    ],
@@ -252,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -286,92 +262,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>[0.44, 0.36, 0.2]</td>\n",
-       "      <td>0.6027</td>\n",
+       "      <td>[1, -3]</td>\n",
+       "      <td>3.162278</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>[0.392, 0.392, 0.216]</td>\n",
-       "      <td>0.5950</td>\n",
-       "      <td>0.9872</td>\n",
+       "      <td>[17, -7]</td>\n",
+       "      <td>18.384776</td>\n",
+       "      <td>5.813777</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>[0.3744, 0.4, 0.2256]</td>\n",
-       "      <td>0.5925</td>\n",
-       "      <td>0.9959</td>\n",
+       "      <td>[113, -75]</td>\n",
+       "      <td>135.624482</td>\n",
+       "      <td>7.376999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>[0.3672, 0.4026, 0.2302]</td>\n",
-       "      <td>0.5915</td>\n",
-       "      <td>0.9984</td>\n",
+       "      <td>[865, -527]</td>\n",
+       "      <td>1012.893874</td>\n",
+       "      <td>7.468370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>[0.3641, 0.4035, 0.2324]</td>\n",
-       "      <td>0.5911</td>\n",
-       "      <td>0.9993</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>[0.3628, 0.4039, 0.2333]</td>\n",
-       "      <td>0.5909</td>\n",
-       "      <td>0.9997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>[0.3622, 0.4041, 0.2337]</td>\n",
-       "      <td>0.5908</td>\n",
-       "      <td>0.9999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>[0.3619, 0.4042, 0.2339]</td>\n",
-       "      <td>0.5908</td>\n",
-       "      <td>0.9999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>[0.3618, 0.4042, 0.234]</td>\n",
-       "      <td>0.5908</td>\n",
-       "      <td>1.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>[0.3617, 0.4042, 0.234]</td>\n",
-       "      <td>0.5907</td>\n",
-       "      <td>0.9999</td>\n",
+       "      <td>[6433, -3987]</td>\n",
+       "      <td>7568.332577</td>\n",
+       "      <td>7.471990</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    i                        Vi  ||Vi||  ||Vi||/||Vi-1||\n",
-       "0   1         [0.44, 0.36, 0.2]  0.6027              NaN\n",
-       "1   2     [0.392, 0.392, 0.216]  0.5950           0.9872\n",
-       "2   3     [0.3744, 0.4, 0.2256]  0.5925           0.9959\n",
-       "3   4  [0.3672, 0.4026, 0.2302]  0.5915           0.9984\n",
-       "4   5  [0.3641, 0.4035, 0.2324]  0.5911           0.9993\n",
-       "5   6  [0.3628, 0.4039, 0.2333]  0.5909           0.9997\n",
-       "6   7  [0.3622, 0.4041, 0.2337]  0.5908           0.9999\n",
-       "7   8  [0.3619, 0.4042, 0.2339]  0.5908           0.9999\n",
-       "8   9   [0.3618, 0.4042, 0.234]  0.5908           1.0000\n",
-       "9  10   [0.3617, 0.4042, 0.234]  0.5907           0.9999"
+       "   i             Vi       ||Vi||  ||Vi||/||Vi-1||\n",
+       "0  1        [1, -3]     3.162278              NaN\n",
+       "1  2       [17, -7]    18.384776         5.813777\n",
+       "2  3     [113, -75]   135.624482         7.376999\n",
+       "3  4    [865, -527]  1012.893874         7.468370\n",
+       "4  5  [6433, -3987]  7568.332577         7.471990"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -416,104 +352,52 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>[1.2857, -0.7143, 0.4286]</td>\n",
-       "      <td>1.5320e+00</td>\n",
+       "      <td>[-0.4545, -0.8182]</td>\n",
+       "      <td>0.935960</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>[4.8776, -6.2653, 2.3878]</td>\n",
-       "      <td>8.2914e+00</td>\n",
-       "      <td>5.4122</td>\n",
+       "      <td>[0.3388, 0.5372]</td>\n",
+       "      <td>0.635114</td>\n",
+       "      <td>0.678569</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>[25.8688, -40.7843, 15.9155]</td>\n",
-       "      <td>5.0851e+01</td>\n",
-       "      <td>6.1331</td>\n",
+       "      <td>[-0.2261, -0.3674]</td>\n",
+       "      <td>0.431398</td>\n",
+       "      <td>0.679245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>[154.4819, -257.3607, 103.8788]</td>\n",
-       "      <td>3.1763e+02</td>\n",
-       "      <td>6.2463</td>\n",
+       "      <td>[0.1542, 0.2492]</td>\n",
+       "      <td>0.293050</td>\n",
+       "      <td>0.679303</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>[957.0046, -1620.6022, 664.5975]</td>\n",
-       "      <td>1.9960e+03</td>\n",
-       "      <td>6.2839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>[5998.4415, -10211.5804, 4214.139]</td>\n",
-       "      <td>1.2570e+04</td>\n",
-       "      <td>6.2979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>[37746.1462, -64373.6582, 26628.512]</td>\n",
-       "      <td>7.9233e+04</td>\n",
-       "      <td>6.3031</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>[237848.8037, -405891.7782, 168043.9746]</td>\n",
-       "      <td>4.9956e+05</td>\n",
-       "      <td>6.3050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>[1499475.8002, -2559445.9822, 1059971.182]</td>\n",
-       "      <td>3.1500e+06</td>\n",
-       "      <td>6.3056</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>[9454812.0924, -16139651.7297, 6684840.6373]</td>\n",
-       "      <td>1.9864e+07</td>\n",
-       "      <td>6.3059</td>\n",
+       "      <td>[-0.1046, -0.1693]</td>\n",
+       "      <td>0.199007</td>\n",
+       "      <td>0.679088</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     i                                            Vi      ||Vi||  \\\n",
-       "1    1                     [1.2857, -0.7143, 0.4286]  1.5320e+00   \n",
-       "2    2                     [4.8776, -6.2653, 2.3878]  8.2914e+00   \n",
-       "3    3                  [25.8688, -40.7843, 15.9155]  5.0851e+01   \n",
-       "4    4               [154.4819, -257.3607, 103.8788]  3.1763e+02   \n",
-       "5    5              [957.0046, -1620.6022, 664.5975]  1.9960e+03   \n",
-       "6    6            [5998.4415, -10211.5804, 4214.139]  1.2570e+04   \n",
-       "7    7          [37746.1462, -64373.6582, 26628.512]  7.9233e+04   \n",
-       "8    8      [237848.8037, -405891.7782, 168043.9746]  4.9956e+05   \n",
-       "9    9    [1499475.8002, -2559445.9822, 1059971.182]  3.1500e+06   \n",
-       "10  10  [9454812.0924, -16139651.7297, 6684840.6373]  1.9864e+07   \n",
-       "\n",
-       "    ||Vi||/||Vi-1||  \n",
-       "1               NaN  \n",
-       "2            5.4122  \n",
-       "3            6.1331  \n",
-       "4            6.2463  \n",
-       "5            6.2839  \n",
-       "6            6.2979  \n",
-       "7            6.3031  \n",
-       "8            6.3050  \n",
-       "9            6.3056  \n",
-       "10           6.3059  "
+       "   i                  Vi    ||Vi||  ||Vi||/||Vi-1||\n",
+       "1  1  [-0.4545, -0.8182]  0.935960              NaN\n",
+       "2  2    [0.3388, 0.5372]  0.635114         0.678569\n",
+       "3  3  [-0.2261, -0.3674]  0.431398         0.679245\n",
+       "4  4    [0.1542, 0.2492]  0.293050         0.679303\n",
+       "5  5  [-0.1046, -0.1693]  0.199007         0.679088"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
